// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SVG can have 0 corner radius 1`] = `
"<svg viewBox=\\"0 0 156.4921875 112\\" width=\\"156.4921875\\" height=\\"112\\" xmlns=\\"http://www.w3.org/2000/svg\\">
<rect id=\\"bg\\" fill=\\"#fff\\" width=\\"156.4921875\\" height=\\"112\\" rx=\\"0\\"></rect><g id=\\"tokens\\" transform=\\"translate(56.90625, 44.8)\\"><text font-family=\\"IBM Plex Mono\\" font-size=\\"16\\" y=\\"22.4\\">
<tspan x=\\"0\\" fill=\\"#aabbcc\\" opacity=\\"1\\">foo</tspan>
</text></g>
</svg>
"
`;

exports[`SVG renderer should generate SVG with correct style attributes 1`] = `
"<svg viewBox=\\"0 0 156.4921875 112\\" width=\\"156.4921875\\" height=\\"112\\" xmlns=\\"http://www.w3.org/2000/svg\\">
<rect id=\\"bg\\" fill=\\"#fff\\" width=\\"156.4921875\\" height=\\"112\\" rx=\\"4\\"></rect><g id=\\"tokens\\" transform=\\"translate(56.90625, 44.8)\\"><text font-family=\\"IBM Plex Mono\\" font-size=\\"16\\" y=\\"22.4\\">
<tspan x=\\"0\\" fill=\\"#aabbcc\\" opacity=\\"1\\">foo</tspan>
</text></g>
</svg>
"
`;
